deps/v8/test/message/fail/using-declaration-rethrow.out
*%(basename)s:{NUMBER}: TypeError: An object is expected with `using` declarations
  using x = 1; // Not an object
            ^
TypeError: An object is expected with `using` declarations
    at *%(basename)s:{NUMBER}:{NUMBER}
